# back/AccountApi/src/main/java/accountapi/controller/RoleController.java
@@ -1,9 +1,11 @@
 package accountapi.controller;
 
+import accountapi.annotation.AuthenticationRequired;
 import accountapi.business.RoleBusiness;
 import accountapi.entity.RoleEntity;
 import accountapi.mapper.RoleMapper;
 import dto.accountapi.Role;
+import dto.accountapi.RoleEnum;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.PathParam;
@@ -11,6 +13,8 @@ import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import org.springframework.stereotype.Controller;
+
+import java.util.List;
 
 @Controller
 @Path("/roles")
@@ -23,9 +27,14 @@ public class RoleController {
     }
 
     @GET
+    @AuthenticationRequired(RoleEnum.ADMIN)
     @Produces(MediaType.APPLICATION_JSON)
     public Response getAllRoles() {
-        return Response.ok(roleBusiness.getAllRoles()).build();
+        List<Role> roles = roleBusiness.getAllRoles();
+        if (roles.isEmpty()) {
+            return Response.status(Response.Status.NO_CONTENT).build();
+        }
+        return Response.ok(roles).build();
     }
 
     @GET
@@ -34,7 +43,7 @@ public class RoleController {
     public Response getRoleById(@PathParam("id") Integer id) {
         Role role = roleBusiness.getRoleById(id);
         if (role == null) {
-            return Response.status(Response.Status.NOT_FOUND).build();
+            return Response.status(Response.Status.NO_CONTENT).build();
         }
         return Response.ok(role).build();
     }
